--- a/css/theme.css
+++ b/css/theme.css
@@ -4,11 +4,27 @@ div {
 }
 
 /* Classes */
-
-.blurb {
+.chat-burst {
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.profile-picture {
+    width: 24px;
+    height: 24px;
+    border-radius: 24px;
+    align-self: flex-end;
+    border-color: grey;
+    border: 1px solid;
+    background-color: white;
+}
+
+.blurb {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .bubble {
@@ -24,7 +40,7 @@ div {
 }
 
 .left-bubble {
-    margin-left: 50px;
+    margin-left: 5px;
     align-self: flex-start;
 }
 
@@ -41,7 +57,7 @@ div {
 }
 
 .right-bubble {
-    margin-right: 30px;
+    margin-right: 20px;
     align-self: flex-end;
 }
 
@@ -68,6 +84,7 @@ div {
     justify-content:center;
     align-items:center;
     flex-direction: column;
+    background-color: #d8b9d8;
 }
 
 #chatbox {
@@ -75,11 +92,13 @@ div {
     flex-direction: column;
     align-items: center;
     height: 1000px;
+    margin-left: 10px;
 }
 
 #chatbox-wrapper {
     overflow-y: scroll;
-    height: 500px;
+    min-height: 300px;
+    max-height: 600px;
     width: 100%;
 }
 
@@ -87,28 +106,48 @@ div {
     max-width: 1000px;
     min-width: 300px;
     width: 60%;
-    box-shadow: 5px 5px grey;
-    border-radius: 5px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    background-color: white;
 }
 
 #message-box-header {
-    background-color: rgb(94, 153, 231);
+    background-color: #2e5fa0;
     color: white;
     padding: 10px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
+#message-box-header:hover {
+    opacity: 0.75;
+}
+
+#conversation-profile {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 #contact-details {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 #contact-details > a {
     text-decoration: none;
     color: white;
+    margin-left: 10px;
+}
+
+#main-profile-picture {
+    align-self: center;
+}
+
+#profile-name {
     margin-left: 10px;
 }
