Starting to add a gallery

--- a/css/theme.css
+++ b/css/theme.css
@@ -163,3 +163,61 @@ div {
 #profile-name {
     margin-left: 10px;
 }
+
+#gallery-overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 100;
+}
+
+#gallery {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%
+}
+
+#main-gallery-focus {
+    flex: 3;
+    display: flex;
+    flex-direction: row;
+}
+
+#previous-gallery-item {
+
+}
+
+#current-gallery-item {
+    flex: 2;
+    background-color: blue;
+}
+
+#next-gallery-item {
+
+}
+
+#gallery-title-bar {
+    display: flex;
+    color: white;
+}
+
+#gallery-title {
+    flex: 1;
+    text-align: center;
+}
+
+#gallery-listings {
+    flex: 1;
+    overflow-y: scroll;
+}
+
+#gallery-scroll {
+    height: 1px;
+}
