--- a/css/theme.css
+++ b/css/theme.css
@@ -86,6 +86,20 @@ div {
     cursor: pointer;
 }
 
+.icon {
+    color: white;
+}
+
+.gallery-navigation {
+    cursor: pointer;
+    flex: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* IDs */
 #browser-screen {
     display:flex;
@@ -152,7 +166,7 @@ div {
     margin-left: 10px;
 }
 
-#contact-details > a.icon:hover {
+#contact-details > a.icon:hover, #gallery-closure:hover {
     color: #132844;
 }
 
@@ -184,10 +198,16 @@ div {
     width: 100%
 }
 
+#gallery-closure {
+    cursor: pointer;
+}
+
 #main-gallery-focus {
     flex: 3;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 #previous-gallery-item {
@@ -196,7 +216,10 @@ div {
 
 #current-gallery-item {
     flex: 2;
-    background-color: blue;
+    background-color: white;
+    justify-content: center;
+        align-items: center;
+        display: flex;
 }
 
 #next-gallery-item {
@@ -219,5 +242,5 @@ div {
 }
 
 #gallery-scroll {
-    height: 1px;
+
 }
