Hacked the video block together
- It is not very clean as it uses some magic numbers instead of relying purely on flexbox. I am not entirely sure how else to do overlays.

--- a/css/theme.css
+++ b/css/theme.css
@@ -108,7 +108,34 @@ div {
 }
 
 .main-image-blurb {
-    overflow
+    overflow-x: scroll;
+}
+
+.thumbnail-overlay {
+    max-height: 90px;
+    max-width: 150px;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: -94px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.thumbnail-overlay:hover {
+    background-color: black;
+    opacity: 0.8;
+}
+
+.thumbnail-blurb {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.thumbnail-block {
+    display: flex;
 }
 
 /* IDs */
