--- a/css/theme.css
+++ b/css/theme.css
@@ -156,7 +156,7 @@ div {
 #chatbox-wrapper {
     overflow-y: scroll;
     min-height: 300px;
-    max-height: 600px;
+    max-height: 700px;
     width: 100%;
 }
 
@@ -268,6 +268,10 @@ div {
 
 #next-gallery-item {
 
+}
+
+#current-gallery-picture {
+    width: 100%
 }
 
 #gallery-title-bar {
