--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -1,14 +1,20 @@
 
 .card {
   margin: 1rem;
-  padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   width: 90%;
+  overflow: hidden;
+}
+
+.card::after {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  opacity: 0;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .card:hover,
@@ -16,6 +22,12 @@
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transform: scale(1.1, 1.1);
+}
+
+.card:hover::after {
+  opacity: 1;
 }
 
 .card h2 {
@@ -27,6 +39,15 @@
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
+}
+
+.card__img {
+  height: 100%;
+  width: 100%;
+}
+
+.card__body {
+  padding: 1.5rem;
 }
 
 @media screen and (min-width: 600px) {
