Adding some experimental pop ups
- it is not working extremely cleanly, needs some more work in the CSS side to pop up from the node and pop back down to the node

--- a/timeline_cards/styles/Home.module.css
+++ b/timeline_cards/styles/Home.module.css
@@ -71,7 +71,8 @@
 .grid {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  padding: 1rem;
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
@@ -88,3 +89,4 @@
     flex-direction: column;
   }
 }
+
