--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -1,20 +1,19 @@
 
 .card {
-  margin: 1rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  width: 90%;
+  width: 100%;
   overflow: hidden;
+  background-color: white;
 }
 
 .card::after {
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   opacity: 0;
-  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .card:hover,
@@ -54,4 +53,17 @@
   .card {
     width: 40%;
   }
+}
+
+.container {
+}
+
+.card__fullscreen {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+.card__img_fullscreen {
+
 }
