--- a/timeline_cards/styles/globals.css
+++ b/timeline_cards/styles/globals.css
@@ -14,3 +14,16 @@ a {
 * {
   box-sizing: border-box;
 }
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  display: inline-block;
+}
+
+li.div:not(:last-child) {
+   padding-bottom: 3px;
+}
