--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -29,7 +29,8 @@
   opacity: 1;
 }
 
-.card h2 {
+.card h2,
+.card__fullscreen h2{
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
@@ -63,6 +64,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
+  overflow: hidden;
 }
 
 .card__img_fullscreen {
