--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -1,20 +1,19 @@
 
 .card {
-  margin: 1rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  width: 90%;
+  width: 100%;
   overflow: hidden;
+  background-color: white;
 }
 
 .card::after {
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   opacity: 0;
-  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .card:hover,
@@ -30,12 +29,14 @@
   opacity: 1;
 }
 
-.card h2 {
+.card h2,
+.card__fullscreen h2{
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
 
-.card p {
+.card p,
+.card__fullscreen p{
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
@@ -54,4 +55,19 @@
   .card {
     width: 40%;
   }
+}
+
+.container {
+}
+
+.card__fullscreen {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.card__img_fullscreen {
+
 }
