--- a/timeline_cards/styles/Home.module.css
+++ b/timeline_cards/styles/Home.module.css
@@ -71,10 +71,12 @@
 .grid {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  padding: 1rem;
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
+  gap: 20px;
 }
 
 .logo {
@@ -88,3 +90,4 @@
     flex-direction: column;
   }
 }
+
