Tidying up the pop ins and outs
- for now added in a mechanism to hide the main thumbnail whilst the popup is up and then having a timer to time it around the same time that the card resizes in and hides itself to pop back in the thumbnail
- removed the old LinkCard modules since they have effectively been replaced with the popout cards

--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -55,6 +55,10 @@
   .card {
     width: 40%;
   }
+  .card__body_fullscreen {
+    width: 800px;
+    align-self: center;
+  }
 }
 
 .container {
@@ -70,4 +74,8 @@
 
 .card__img_fullscreen {
 
+}
+
+.hidden {
+  visibility: hidden;
 }
