Slight tweak to colour design
- and slight bug fix for the gallery which had an array overflow

--- a/archived/v1/css/theme.css
+++ b/archived/v1/css/theme.css
@@ -143,7 +143,7 @@ div {
     justify-content:center;
     align-items:center;
     flex-direction: column;
-    background-color: #d8b9d8;
+    background-color: #e5e5e5;
 }
 
 #chatbox {
