Correcting some of the card CSS display issues
- there is a slight width bug where it doesn't actually put in the appropriate boundaries in
- also grouped together the expandable thumbnail content and grouped the expanded pop up content to make it easier to animate things

--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -11,7 +11,8 @@
   background-color: white;
 }
 
-.card::after {
+.card::after
+.card__fullscreen::after {
   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   opacity: 0;
 }
