--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -69,7 +69,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  overflow: hidden;
+  overflow: scroll;
   z-index: 10;
 }
 
