--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -9,6 +9,8 @@
   width: 100%;
   overflow: hidden;
   background-color: white;
+  backface-visibility: hidden;
+  will-change: scale;
 }
 
 .card::after
@@ -23,7 +25,7 @@
   color: #0070f3;
   border-color: #0070f3;
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-  transform: scale(1.1, 1.1);
+  transform: scale(1.1, 1.1) translateZ(0);
 }
 
 .card:hover::after {
@@ -79,4 +81,32 @@
 
 .hidden {
   visibility: hidden;
+}
+
+.card__close_fullscreen {
+  width: 6em;
+  height: 6em;
+  right: -3em;
+  top: -3em;
+  border-radius: 3em;
+  background-color: gray;
+  position: fixed;
+  text-align: center;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  cursor: pointer;
+  z-index: 10;
+}
+
+.card__close_fullscreen:hover,
+.card__close_fullscreen:focus,
+.card__close_fullscreen:active {
+  transform: scale(2, 2) translate(-0.25em, 0.25em);
+}
+
+.card__close_symbol {
+  position: absolute;
+  bottom: 0.75em;
+  left: 1em;
+  color: white;
+  font-size: 1.5em;
 }
