--- a/timeline_cards/styles/Orion.module.css
+++ b/timeline_cards/styles/Orion.module.css
@@ -2,3 +2,14 @@
   width: 100%;
   height: auto;
 }
+
+.stickyHeading {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  line-height: 2em;
+}
+
+.embeddedVideo {
+  width: 100%;
+}
