Cleaning up the Card grid
- Tried to use the masonry layout from tobias ahlin but it was bugging out with regards to the allocation of items per columns but I think it is related to how I was doing the card pop up magic behind the scenes and this introduced a new element which shifted the masonry tiles out of alignment
- But since I am dealing with a static site and not a dynamic one I figured I can just hide this hack away for now and can probably deal with this at a later time.

--- a/timeline_cards/styles/Home.module.css
+++ b/timeline_cards/styles/Home.module.css
@@ -71,12 +71,19 @@
 .grid {
   display: flex;
   align-items: center;
-  justify-content: space-around;
   padding: 1rem;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
   max-width: 800px;
+  max-height: 800px;
   margin-top: 3rem;
   gap: 20px;
+}
+
+.grid::before {
+  content: "";
+  flex-basis: 100%;
+  width: 0;
+  order: 1;
 }
 
 .logo {
