Add JSPets page (#3)
* Added the page

- Tweaked some stuff to clean up the cards CSS
- Added quite a bit of content on the JSPets side of things, would like to add more though

* Cleaning up some sprites

- Added a few sprites and cleaned the page so it looks slightly better
- Added in some animation frames for things

* Finishing up the JSPets page

--- a/timeline_cards/styles/Orion.module.css
+++ b/timeline_cards/styles/Orion.module.css
@@ -1,15 +1,15 @@
-.systemDiagram {
+.image {
   width: 100%;
   height: auto;
 }
 
-.stickyHeading {
+.sticky_heading {
   position: sticky;
   top: 0;
   background-color: white;
   line-height: 2em;
 }
 
-.embeddedVideo {
+.embedded_video {
   width: 100%;
 }
