--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -11,6 +11,7 @@
   background-color: white;
   backface-visibility: hidden;
   will-change: scale;
+  cursor: pointer;
 }
 
 .card::after
@@ -61,6 +62,7 @@
   .card__body_fullscreen {
     max-width: 800px;
     align-self: center;
+    width: 100%;
   }
 }
 
@@ -91,7 +93,6 @@
   border-radius: 3em;
   background-color: gray;
   position: fixed;
-  text-align: center;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   cursor: pointer;
   z-index: 10;
@@ -105,10 +106,12 @@
 
 .card__close_symbol {
   position: absolute;
-  bottom: 0.75em;
+  bottom: 1.5em;
   left: 1em;
   color: white;
-  font-size: 1.5em;
+  font-size: 0.9em;
+  height: 2em;
+  width: 2em;
 }
 
 .content_fullscreen {
