--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -1,22 +1,20 @@
-
 .card {
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid var(--border-color);
   border-radius: 10px;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   width: 100%;
   overflow: hidden;
-  background-color: white;
+  background-color: var(--secondary-color);
   backface-visibility: hidden;
   will-change: scale;
   cursor: pointer;
 }
 
-.card::after
-.card__fullscreen::after {
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+.card::after .card__fullscreen::after {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   opacity: 0;
 }
 
@@ -25,7 +23,7 @@
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   transform: scale(1.1, 1.1) translateZ(0);
 }
 
@@ -34,13 +32,13 @@
 }
 
 .card h2,
-.card__fullscreen h2{
+.card__fullscreen h2 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
 
 .card p,
-.card__fullscreen p{
+.card__fullscreen p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
@@ -72,13 +70,12 @@
 .card__fullscreen {
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: var(--card-color);
   overflow: scroll;
   z-index: 10;
 }
 
 .card__img_fullscreen {
-
 }
 
 .hidden {
