--- a/timeline_cards/styles/Socials.module.css
+++ b/timeline_cards/styles/Socials.module.css
@@ -9,7 +9,7 @@
 .social_button {
   width: 2em;
   height: 2em;
-  color: black;
+  color: var(--social-icon-color);
   backface-visibility: hidden;
   will-change: transform;
   transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
