--- a/timeline_cards/styles/globals.css
+++ b/timeline_cards/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--font-color);
 }
 
 a {
@@ -29,4 +31,30 @@ li.div:not(:last-child) {
 
 p {
   padding-bottom: 10px;
+}
+
+:root,
+div[data-theme="light"] {
+  --bg-color: white;
+  --font-color: black;
+  --social-icon-color: black;
+  --border-color: #eaeaea;
+  --card-color: white;
+}
+
+div[data-theme="pink"] {
+  --bg-color: pink;
+  --font-color: darkred;
+  --secondary-color: pink;
+  --social-icon-color: darkred;
+  --border-color: darkred;
+  --card-color: pink;
+}
+
+div[data-theme="dark"] {
+  --bg-color: black;
+  --font-color: white;
+  --border-color: lightgray;
+  --social-icon-color: lightgray;
+  --card-color: black;
 }
