Added theme changer support
- Originally I had planned for a button menu to change the theme, but then I thought about it a bit more and decided against it
- Simple is better I guess?

--- a/timeline_cards/styles/Socials.module.css
+++ b/timeline_cards/styles/Socials.module.css
@@ -12,7 +12,7 @@
   color: var(--social-icon-color);
   backface-visibility: hidden;
   will-change: transform;
-  transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .social_button:hover {
