--- a/timeline_cards/styles/Card.module.css
+++ b/timeline_cards/styles/Card.module.css
@@ -1,13 +1,13 @@
 .card {
   text-align: left;
-  color: inherit;
+  color: var(--card-text-color);
   text-decoration: none;
   border: 1px solid var(--border-color);
   border-radius: 10px;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   width: 100%;
   overflow: hidden;
-  background-color: var(--secondary-color);
+  background-color: var(--card-color);
   backface-visibility: hidden;
   will-change: scale;
   cursor: pointer;
@@ -21,8 +21,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: var(--border-color-hover);
+  border-color: var(--border-color-hover);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   transform: scale(1.1, 1.1) translateZ(0);
 }
@@ -88,7 +88,7 @@
   right: -3em;
   top: -3em;
   border-radius: 3em;
-  background-color: gray;
+  background-color: var(--close-card-color);
   position: fixed;
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   cursor: pointer;
@@ -105,7 +105,7 @@
   position: absolute;
   bottom: 1.5em;
   left: 1em;
-  color: white;
+  color: var(--close-color);
   font-size: 0.9em;
   height: 2em;
   width: 2em;
