--- a/timeline_cards/styles/Home.module.css
+++ b/timeline_cards/styles/Home.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   background-color: var(--bg-color);
   color: var(--font-color);
-  transition: all 0.3s ease-in;
+  transition: background 0.3s ease-in;
 }
 
 .main {
@@ -22,7 +22,7 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid var(--border-color);
+  border-top: 1px solid var(--footer-border-color);
   display: flex;
   justify-content: center;
   align-items: center;
