--- a/timeline_cards/styles/Home.module.css
+++ b/timeline_cards/styles/Home.module.css
@@ -5,6 +5,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--bg-color);
+  color: var(--font-color);
+  transition: background 0.3s ease-in;
 }
 
 .main {
@@ -19,7 +22,7 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid var(--footer-border-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,11 +33,6 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
 }
 
 .title a:hover,
@@ -57,15 +55,6 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -98,4 +87,3 @@
     max-height: 100%;
   }
 }
-
